made align correct this time

--- a/src/index.css
+++ b/src/index.css
@@ -20,7 +20,12 @@ html {
 }
 
 .font-family {
-  font-family: "Bricolage Grotesque";
+  font-family: "Bricolage Grotesque", sans-serif;
   line-height: 120%;
   text-align: center;
+}
+
+.font-DM-Sans {
+  font-family: "DM Sans",sans-serif;
+  line-height: 120%;
 }
